--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/framework": "5.3.*",
         "guzzlehttp/guzzle": "~5.3|~6.0",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "barryvdh/laravel-debugbar": "^2.2"
+        "barryvdh/laravel-debugbar": "^2.2",
+        "pmatseykanets/laravel-scout-postgres": "^0.1.1",
+        "laravel/scout": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
