--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "league/flysystem-aws-s3-v3": "~1.0",
         "barryvdh/laravel-debugbar": "^2.2",
         "pmatseykanets/laravel-scout-postgres": "^0.1.1",
-        "laravel/scout": "^1.1"
+        "laravel/scout": "^1.1",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
