--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "private": true,
-  "scripts": {
-    "prod": "gulp --production",
-    "dev": "gulp watch"
-  },
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "laravel-elixir": "^6.0.0-9",
-    "laravel-elixir-vue": "^0.1.4",
-    "laravel-elixir-webpack-official": "^1.0.2",
-    "lodash": "^4.14.0",
-    "vue": "^1.0.26",
-    "vue-resource": "^0.9.3"
-  }
+    "private": true,
+    "scripts": {
+        "prod": "gulp --production",
+        "dev": "gulp watch"
+    },
+    "devDependencies": {
+        "gulp": "^3.9.1",
+        "laravel-elixir": "^6.0.0-9",
+        "laravel-elixir-vue": "^0.1.4",
+        "laravel-elixir-vue-2": "^0.2.0",
+        "laravel-elixir-vueify": "^2.0.0",
+        "laravel-elixir-webpack-official": "^1.0.2",
+        "lodash": "^4.14.0",
+        "vue": "^2.0",
+        "vue-resource": "^0.9.3"
+    },
+    "browserify": {
+        "transform": [
+            "aliasify"
+        ]
+    },
+    "aliasify": {
+        "aliases": {
+            "vue": "vue/dist/vue.js",
+            "underscore": "lodash"
+        }
+    }
 }
